--- a/go-gin/.env
+++ b/go-gin/.env
@@ -1,2 +1,2 @@
 PORT = 9000
-MONGODB_URL = mongodb+srv://aditya03joshi:DiZ7hDjkzVYzgG7y@cluster1.0eoeeqx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+MONGODB_URL = 
